@@ -1,3 +1,10 @@
+2005-11-27  Christopher Faylor  <cgf@timesys.com>
+
+	* win32-nat.c (env_sort): New function.
+	(win32_create_inferior): Rename env to in_env.  Sort environment before
+	handing it off to CreateProcess.
+	(win32_current_sos): Quiet a compiler warning.
+
 2005-11-25  Andrew Stubbs  <andrew.stubbs@st.com>
 
 	* event-top.h (async_init_signals): Add SIGTERM handler.
